# keyar-mining

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: 404.html  base.html  index.html  mkdocs.yml
docs/association_rules/: index.html
docs/association_rules/association_rules.apriori/: index.html
docs/association_rules/association_rules.evaluate/: index.html
docs/association_rules/association_rules.fpgrowth/: index.html
docs/classification/: index.html
docs/classification/classification.knn/: index.html
docs/classification/classification.logistic_regression/: index.html
docs/clustering/: index.html
docs/clustering/clustering.kmeans/: index.html
docs/datasets/: index.html
docs/datasets/datasets.association_rules/: index.html
docs/datasets/datasets.classification/: index.html
docs/datasets/datasets.covid_dataset/: index.html
docs/regression/: index.html
docs/regression/regression.linear_regression/: index.html
docs/sources/: index.md
docs/sources/association_rules/: index.md  (+3 more)
krmining/association_rules/: __init__.py  _apriori.py  _evaluate.py  _fpgrowth.py  _tree.py
krmining/classification/: __init__.py  _knn.py  _logistic_regression.py
krmining/clustering/: __init__.py  _kmeans.py
krmining/datasets/: __init__.py  _covid_id.py  _dummy_data.py
krmining/regression/: __init__.py  _linear_regression.py
krmining/utils/: __init__.py  activation_funtions.py  association_rules_eval.py  association_rules_gen.py  create_tree.py  least_square.py  metrics.py  optimizer.py  tree.py
(+25 files in other folders)
