[metadata]
name = keyar-mining
version = 0.0.0
author = BASIS / SynitIsCool
author_email = zolarpixel3@gmail.com
description = Package for machine learning algorithm and data mining
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SynitCool/keyar-mining
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True